welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:7: error: ';' expected but 'return' found.
  }return n
   ^